assets/css/style.css
/*======================================================================*/
/* GENERAL STYLING */
/*======================================================================*/
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    /* z-index: 2; */
    /* border: 1px solid red; */
}

body, html{
    height: 100vh;
    width: 100%;
    font-family: monospace;
    /* font-family: 'Ubuntu', sans-serif; */
    /* font-family: 'Indie Flower', cursive; */
    color: black;
}

.clearfix {
    overflow: auto;
}

/*======================================================================*/
/* HEADER */
/*======================================================================*/
nav {
    position: fixed;
    background: rgba(255, 255, 255, 0.8) !important;
    padding: 0 20px;
    z-index: 100;
    /* box-shadow: none; */
}

/* text color */
nav div ul li a,
nav div a {
    color: black !important;
}

/* hover color */
.nav-effect:hover {
    background: rgb(99, 194, 222);
}

/* clicked color */
.highlight {
    background: rgb(99, 194, 222);
}

.name {
    font-size: 24px;
}

/*======================================================================*/
/* LANDING PAGE */
/*======================================================================*/
.gorge {
    background-image: url("../images/emory.jpg");
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    /* z-index: 0; */
}

#hello-container {
    display: flex;
    align-items: center; 
    text-align: center;
    color: rgb(231, 245, 249);
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

#hello-content {
    background: rgb(99, 194, 222, .5);
    border-radius: 50%;
    padding: 40px;
    border-style: solid;
    border-width: 5px;
    border-color: rgb(231, 245, 249);
}






/*======================================================================*/
/* SCROLLING CSS */
/*======================================================================*/
.scrolled {
    background: rgb(0, 0, 0) !important;
    /* border-style: solid;
    border-width: 0 0 2px 0;
    border-color: rgb(99, 194, 222); */
}
.scrolled-font {
    color: white !important;
}

/*======================================================================*/
/* ABOUT */
/*======================================================================*/
.trees {
    background-image: url("../images/trees.jpg");
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
    height: 94%;
    width: 100%;
    display: flex;
    justify-content: center;
    border-style: solid;
    border-width: 10px 0 10px 0;
    border-color: rgb(99, 194, 222);
}

#about-me-container {
    display: flex;
    justify-content: center;
    align-items: center; 
}

#about-me {
    /* height: 85%; */
    background: rgb(231, 245, 249, .8);
    margin: 50px 0 50px 0;
    border-style: solid;
    border-width: 10px 0;
    border-color: rgb(99, 194, 222);
    border-radius: 15%;
    /* position: absolute; */
   

    /* margin: auto; */
}

.about-icons {
    background: rgba(255, 255, 255);
    height: 170px;
    width: 170px;
    padding-top: 10px;
    margin: 0 auto;
    color: #1F1F1F;
    border-style: solid;
    border-width: 10px 0;
    border-color: rgb(99, 194, 222);
    border-radius: 15%;
}

.about-icons:hover {
    -webkit-transform: scale(1.3);
    -ms-transform: scale(1.3);
    transform: scale(1.3);
}

#about-me div h2 {
    font-weight: bold;
}

#slashes {
    color: rgb(99, 194, 222);
}

#resume-button-color {
    background: rgb(99, 194, 222);
}

#resume-button {
    padding-top: 20px;
}


/*======================================================================*/
/* PROJECTS */
/*======================================================================*/
.bottombg {
    background-image: url("../images/dark.png");
    min-height: 150%;
    width: 100%;
    position: relative;

}

.project-section {
    min-height: 100%;
    width: 100%;
}

#projects {
    color: #E7F5F9;
    padding: 0 40px 40px 40px;
}

.projects-slashes {
    color: rgb(99, 194, 222);
}

#projects div h2 {
    margin: 0;
    padding-top: 40px;

}

.card-body {
    background: #E7F5F9 !important;
    color: black;
}

.card {
    border-style: solid;
    border-width: 5px;
    border-color: rgb(99, 194, 222);
}

/* HOVER */
.card-reveal{
  color: #ffffff;
  background-color: rgba(0,0,0,0.7) !important;
}
div.card-reveal span.card-title{
  color: #ffffff !important;
}

.hover {
    background-color: rgba(0,0,0,0.7) !important;
}

/*======================================================================*/
/* CONTACT */
/*======================================================================*/
.footer {
    width: 100%;
    min-height: 40%;
    padding-top: 160px;
    background-color: rgb(99, 194, 222, .5) !important;
    border-top-style: solid;
    border-width: 10px 0 0 0;
    border-color: rgb(99, 194, 222);
    border-radius: 50% 50% 0 0;
    position: absolute;
    bottom: 0;
    
}

.copyright {
    
    color: white;
    text-align: center;
    
    margin: 0 auto;
}

#contact {
    color: #1F1F1F;
}

.icon-size {
    width: 100px;
    height: 100px;
}

/* .icon-space {
    padding-right: 10px;
} */

/*======================================================================*/
/* MEDIA QUERIES */
/*======================================================================*/
/* Resizes Landing Background */
@media screen and (max-width: 1280px) {
    .gorge {
        background-image: url("../images/emory.jpg");
        background-attachment: fixed;
        background-repeat: no-repeat;
        background-size: cover;
        height: 100%; 
        margin: 0px;
        padding: 0px;
        max-width: 100%;
        -webkit-background-size: cover;
        -moz-background-size: cover;
        -o-background-size: cover;
        background-size: cover;
        background-position: 60% 40%;
    }

    .trees {
        background-image: url("../images/trees.jpg");
        background-position: center;
        background-attachment: fixed;
        background-repeat: no-repeat;
        background-size: cover;
        height: 93%;
        width: 100%;
        display: flex;
        justify-content: center;
        border-style: solid;
        border-width: 10px 0 10px 0;
        border-color: rgb(99, 194, 222);
    }

}

/* HIDE ABOUT ICONS */
@media screen and (max-width: 748px) {

    #hide-about-icons {
        display: none;
    }
    #resume-button {
        padding-top: 0;
    }

    .filters-button-group {
        text-align: center;
        padding: 10px;
        display: block !important;
    }

    .header {
        font-size: 20pt;
    }
}

/* Format Footer */
@media screen and (max-width: 992px) {
    .bottombg {
        min-height: 160%;
    }
    .footer {
        min-height: 30%;
    }
    
}

@media screen and (max-width: 600px) {
    .bottombg {
        min-height: 260%;
    }
    .footer {
        min-height: 10%;
    }
    
}

